bug: Improve lead block alignment between breakpoints

--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -10,12 +10,16 @@
 
 @media screen and (min-width: 1024px) {
   .intro {
-    padding: 92px 48px 0 48px;
+    margin: 0 auto;
+    max-width: 928px;
+    padding: 92px 0 0 0;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .intro {
-    padding: 92px 148px 0 148px;
+    margin: 0 auto;
+    max-width: 984px;
+    padding: 92px 0 0 0;
   }
 }
